--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import "~swiper/css/bundle";
+
+/* @import "slick-carousel/slick/slick.css";
+@import "slick-carousel/slick/slick-theme.css"; */
+body {
+  @apply bg-[#f8f8f8];
+}
